--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Roggie Tankip</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -24,8 +24,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Roggie Tankip</h1>
+							<p>Full Stack Web Developer</p>
 						</header>
 						<!--
 						<hr />
@@ -66,9 +66,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://twitter.com/r_tankip" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://www.instagram.com/r_tankip/" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/rtankip/" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -76,7 +76,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Roggie Tankip</li><li>Design: <a href="https://www.designersdec.com">Designers Dec</a></li>
 						</ul>
 					</footer>
 
